--- a/package.json
+++ b/package.json
@@ -34,5 +34,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^6.3.1",
+    "autoprefixer": "^10.4.7",
+    "install": "^0.13.0",
+    "moment": "^2.29.3",
+    "npm": "^8.10.0",
+    "postcss": "^8.4.13",
+    "tailwindcss": "^3.0.24"
   }
 }
